--- a/Stylesheets/adminDash.css
+++ b/Stylesheets/adminDash.css
@@ -8,8 +8,88 @@ html {
   scroll-behavior: smooth;
   background-color: rgba(231, 238, 240, 0.26);
 }
+.tabcontent {
+  color: rgb(0, 0, 0);
+  display: none;
+  padding: 61px 20px;
+  height: 100%;
+}
+.tabcontent-low {
+  animation: fadeEffect 1s; /* Fading effect takes 1 second */
+}
 
-.main-image {
+.tabcontent {
+  animation: fadeEffect 1s; /* Fading effect takes 1 second */
+}
+/* Go from zero to full opacity */
+@keyframes fadeEffect {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.tab1 {
+  overflow: hidden;
+  border: 1px solid #ccc;
+  background-color: #f1f1f1;
+}
+
+/* Style the buttons that are used to open the tab content */
+.tab1 button {
+  background-color: inherit;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 25px 53px;
+  transition: 0.3s;
+}
+
+/* Change background color of buttons on hover */
+.tab1 button:hover {
+  background-color: #ddd;
+}
+
+/* Create an active/current tablink class */
+.tab1 button.active {
+  background-color: #ccc;
+}
+
+/* Style the tab content */
+.tabcontent-low {
+  display: none;
+  padding: 6px 12px;
+  border: 1px solid #ccc;
+  border-top: none;
+}
+
+/* .dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+.dropdown-content a:hover {
+  background-color: azure;
+}
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+ */
+
+/* .main-image {
   height: 100%;
   width: 100%;
   background-color: #9bd3e463;
@@ -32,7 +112,7 @@ html {
   margin: 0px 4px 32px 0px;
   margin-left: 40px;
   margin-top: 30px;
-  /* padding: 21px 48px; */
+  padding: 21px 48px;
   font-size: 15px;
   padding-top: 20px;
   padding-left: 35px;
@@ -59,7 +139,7 @@ html {
   margin: 0px 4px 32px 0px;
   margin-left: 40px;
   margin-top: 30px;
-  /* padding: 21px 48px; */
+  padding: 21px 48px;
   font-size: 15px;
   padding-top: 20px;
   padding-left: 35px;
@@ -113,4 +193,4 @@ button {
 
 .result img {
   float: right;
-}
+} */
