--- a/Stylesheets/navbar.css
+++ b/Stylesheets/navbar.css
@@ -16,24 +16,33 @@ font-family: 'Poppins', sans-serif;
   color: black;
   text-decoration:none;
   font-size: 18px;
+  cursor: pointer;
 }
+
 .navbar img{
   width: 76px;
   height: 76px;
+}
+.sub1 {
+        width: 121px;
+    color: #202020;
+    background: rgb(8, 182, 109);
+    font-size: 15px;
+    height: 45px;
+    margin: 27px;
+    padding: 28px;
+    width: 100px;
 }
 
 .links {
   margin-top: 32px;
   margin-right: 5px;
 }
-
-.login{
-  position:absolute;
-  left: 560px;
-  top: 20px;
+.links span{
+   margin-top: 32px;
+  margin-right: 5px;
 }
 
-.login img{
-  width: 30px;
-  height: 30px;;
+.links:hover{
+  background-color: rgb(8, 182, 109);
 }
