--- a/Stylesheets/subs.css
+++ b/Stylesheets/subs.css
@@ -87,18 +87,18 @@ html {
 }
 .button {
   position: relative;
-  background-color: white;
-  border-color: #000;
+  background-color: rgb(110, 238, 217);
+  border-color: #54cbdb;
   top: 20px;
   height: 50px;
   width: 380px;
-  box-shadow: 5px 5px 5px gray;
+  box-shadow: 5px 5px 5px rgb(188, 236, 232);
 }
 
 .button:hover {
   transition-duration: 2ms;
-  background-color: black;
-  color: white;
+  background-color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
   cursor: pointer;
   box-shadow: 0px 0px;
   transition: 0.5s;
